--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: d
 sudo: false
 
+os:
+  - linux
+  - osx
+
 matrix:
   include:
-    - d: dmd-2.072.0-b2
+    - d: dmd-2.073.0
+      env: [FRONTEND=2.073]
+    - d: dmd-2.072.2
       env: [FRONTEND=2.072]
     - d: dmd-2.071.2
       env:
